@@ -1,6 +1,10 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
-Jul-10-2005 patrickh    Updated to VPR 1.1.3.
+Jul-11-2005 patrickh    Removed the methods gadget::Proxy::isStupified() and
+                        gadget::Proxy::stupify(), both of which are mis-spelled
+                        and have been deprecated since 0.92.1.
+                        NEW VERSION: 1.1.3
+Jul-11-2005 patrickh    Updated to VPR 1.1.3.
 Jul-10-2005 patrickh    Updated to VPR 1.1.2.
 Jun-29-2005 patrickh    Changed gadget::ProxyFactory to hold a vector of
                         boost::shared_ptr<gadget::ProxyConstructorBase> objects
